# ShareChannel

./: .env.example  .gitignore  alembic.ini  create_session.py  notenv.txt  notenv2.txt  pyproject.toml  requirements.txt  sharechannel.service
src/app/: config.py  main.py
src/app/bot/: __init__.py  keyboards.py  middlewares.py
src/app/bot/routers/: __init__.py  accounts.py  auth.py  categories.py  chain_manage.py  chains_wizard.py  menu.py  security.py  shops.py
src/app/core/: __init__.py  db.py  limiter.py  logging.py  redis.py  scheduler.py  security.py
src/app/core/migrations/: env.py
src/app/core/migrations/versions/: 20240322_01_initial.py  20251101_02_add_source_chat_title.py  20251102_03_add_pickup_delay.py  20251108_04_add_login_attempts.py  20251109_05_add_user_management.py  20251113_06_add_categories.py  20251114_07_add_category_hierarchy.py  20251114_08_fix_category_autoincrement.py  20251121_09_add_chat_links.py  20251212_10_add_telethon_accounts.py  20251213_11_fix_user_tables_pk.py
src/app/domain/: __init__.py  dto.py  models.py  repositories.py
src/app/domain/services/: __init__.py  account_manager.py  backup_service.py  channel_link.py  deletion_sync.py  forwarding.py  mapping.py  notifications.py  permissions.py  security_service.py  telethon_client.py  telethon_pool.py  text_sanitizer.py
