[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharechannel-bot"
version = "0.1.0"
description = "Production-ready Telegram forwarding bot with aiogram, Telethon, PostgreSQL, Redis, and APScheduler."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ShareChannel Team" }
]
keywords = ["telegram", "bot", "aiogram", "telethon", "redis", "apscheduler"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "aiogram==3.4.1",
  "alembic==1.13.1",
  "aiolimiter==1.1.0",
  "APScheduler==3.10.4",
  "asyncpg==0.29.0",
  "bcrypt==4.1.2",
  "pydantic==2.5.3",
  "pydantic-settings==2.2.1",
  "python-dotenv==1.0.1",
  "redis==5.0.3",
  "SQLAlchemy==2.0.27",
  "structlog==23.3.0",
  "telethon==1.34.0",
  "tenacity==8.2.3",
  "ujson==5.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.1.1",
  "pytest-asyncio==0.23.6",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "mypy==1.8.0",
  "ruff==0.3.5",
  "types-redis==4.6.0.20240311"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "E",
  "F",
  "I",
  "UP",
  "ASYNC",
  "B",
  "Q",
  "S"
]
ignore = [
  "S101"
]
